# kursovaya3

./: README.md  pyproject.toml
src/: main.py
tests/: test_functions.py
utils/: functions.py
